--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   "dependencies": {
     "antd": "^5.24.0",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.5",
-    "react-snap": "^1.23.0",
-    "tailwindcss": "^4.0.6"
+    "react-snap": "^1.13.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
