--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "taxopark-ssg",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -18,6 +18,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.1.5",
     "react-snap": "^1.13.1"
   },
