--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.9",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
     "exceljs": "^4.4.0",
@@ -19,7 +20,6 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^7.1.5",
     "react-snap": "^1.13.1",
     "xlsx": "^0.18.5"
