--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/sortable": "^10.0.0",
     "@tanstack/react-query": "^5.66.9",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
