--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# VITE_API_URL=https://vsetaxoparki.kz/api
-# VITE_API_URL=https://0419-91-244-102-30.ngrok-free.app:5000
-VITE_API_URL=http://213.109.146.58/api
+VITE_API_URL=https://vsetaxoparki.kz/api
+# VITE_API_URL=http://213.109.146.58/api
