--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-VITE_API_URL=https://vsetaxoparki.kz/api
+# VITE_API_URL=https://vsetaxoparki.kz/api
 # VITE_API_URL=http://213.109.146.58/api
+VITE_API_URL=http://localhost:5000
