--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # VITE_API_URL=https://vsetaxoparki.kz/api
 VITE_API_URL=http://localhost:5000
+VITE_SECRET_KEY=12345678901234567890123456789012
+VITE_IV=1234567890123456
 # VITE_API_URL=http://213.109.146.58/api
