--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@tanstack/react-query": "^5.66.9",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
+    "crypto-js": "^4.2.0",
     "exceljs": "^4.4.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -37,6 +41,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
